Накидал главную страницу

--- a/index.html
+++ b/index.html
@@ -5,8 +5,115 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+	<header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="" height="" alt="Логотип студии «Нёрдс»">
+        </a>
+		<ul class="site-navigation">
+          <li><a href="about.html">Студия</a></li>
+		  <li><a href="clients.html">Клиенты</a></li>
+		  <li><a href="shop.html">Магазин</a></li>
+		  <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+		<ul class="cart">
+          <li class="cart-link">Корзина</li>
+        </ul>
+      </nav> 
+    </header>
+	
+	<main class="container">
+      <h1 class="visually-hidden">Студия «Нёрдс»</h1>
+	  <section class="slider">
+        <p class="slider-header">Долго, дорого, скурпулезно.</p>
+		<p class="slider-text"> Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a class="slider-button" href="learnmore.html">Узнать больше</a>
+		<img  src="img/slider1.svg" width="" height="" alt="Долго, дорого, скурпулезно." >	
+      </section>
+	  
+	  <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+		<ul class="services-list">
+          <li class="service-item">
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+			<a class="order-site-button" href="order-site.html">Заказать</a>
+		  </li>
+		  <li class="service-item">
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+			<a class="order-application-button" href="order-application.html">Заказать</a>
+		  </li>
+		  <li class="service-item">
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+			<a class="order-presentation-button" href="order-presentation.html">Заказать</a>
+		  </li>
+        </ul>
+	  </section>
+      
+	  <section class="studio">
+		<section class="studio-left">
+		<p class="studio-heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+		<p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
+		<p class="text-uppercase">Выполняем заказы на разработку: </p>   
+		<ul class="studio-service-list">
+		  <li>Веб-сайтов любой сложности</li>
+		  <li>Мобильных приложение для iOS и Android</li>
+		  <li>Слайдшоу и видео для корпоративных презентаций</li>
+		</ul>
+	  </section>
+	  <section class="studio-right">
+	    <img src="img/nerds-illustration.jpg" width="" height="" alt="Логотип студии «Нёрдс»">
+	    <p class="text-uppercase">с 2004 года Любим точность во всем:</p>
+		<table class="studio-table">
+		  <th>
+		    <td>146%</td>
+			<td>100%</td>
+			<td>50%</td>
+		  </th>
+		  <tr>
+		    <td>Уровень самоотдачи</td>
+		    <td>Соблюдение сроков</td>
+			<td>Минимальная предоплата</td>
+		  </tr>
+		</table>
+	  </section>
+	  <section class="portfolio">
+	    <a class="portfolio-logo">
+          <img src="img/logo-1.png" width="" height="" alt="Логотип HTML Academy">
+        </a>
+		<a class="portfolio-logo">
+          <img src="img/logo-2.png" width="" height="" alt="Логотип Borodinski">
+        </a>
+		<a class="portfolio-logo">
+          <img src="img/logo-3.png" width="" height="" alt="Логотип Pink">
+        </a>
+		<a class="portfolio-logo">
+          <img src="img/logo-4.png" width="" height="" alt="Логотип MISHKA">
+        </a>
+	  </section>
+	  </section>
+	</main>
+	<footer class="main-footer">
+	  <div class="footer-map">
+	    <div class="contacts">
+		  <p class="text-uppercase">NЁRDS DESIGN STUDIO</p>
+		  <p>191186, Санкт-Петербург, <br>
+             ул. Б. Конюшенная, д. 19/8<br><br>
+			 тел. +7 (812) 275-75-75</p>
+		    <a class="write-button" href="#">Напишите нам</a>
+		</div>
+	  </div>
+	  <div class="footer-social">
+	    <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+		<p class="social-text"><b>Давайте дружить, это выгодно!</b><br>
+		Скидка 10% для друзей из социальных сетей.</p>
+	  </div>
+	</footer>
   </body>
 </html>
