Пометил ошибки в html разметке главной страницы
Ошибки в html разметке, которые нужно исправить, помечены комментариями.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -5,6 +6,10 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+   <!-- 
+      Пока у нас нет готовых для вставки изображений, можешь использовать адреса "заглушки". Это было сказано в задании.
+      Например: <img src="http://placehold.it/150x100"> вставит изображение 150х100px, можешь попробовать, это довольно удобно и наглядно.
+   -->
 	<header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
@@ -16,6 +21,7 @@
 		  <li><a href="shop.html">Магазин</a></li>
 		  <li><a href="contacts.html">Контакты</a></li>
         </ul>
+<!--   этот блок пока что можно разметить обычной ссылкой: a.cart > Корзина   -->
 		<ul class="cart">
           <li class="cart-link">Корзина</li>
         </ul>
@@ -26,8 +32,9 @@
       <h1 class="visually-hidden">Студия «Нёрдс»</h1>
 	  <section class="slider">
         <p class="slider-header">Долго, дорого, скурпулезно.</p>
-		<p class="slider-text"> Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+		<p class="slider-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
         <a class="slider-button" href="learnmore.html">Узнать больше</a>
+<!--    Это изображение больше необходимо для стилизациии и будет задано фоном через css, поэтому из html разметки его лучше убрать    -->
 		<img  src="img/slider1.svg" width="" height="" alt="Долго, дорого, скурпулезно." >	
       </section>
 	  
@@ -53,9 +60,12 @@
 	  </section>
       
 	  <section class="studio">
-		<section class="studio-left">
+		<section class="studio-left"> <!-- можно использовать article, вполне себе самостоятельный раздел -->
+<!--   Вот здесь можно изпользовать тег b вместо p, поскольку текст визуально выделен    -->
 		<p class="studio-heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+<!--    Недописан текст    -->
 		<p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
+<!--   Это заголовок, используй h3     -->
 		<p class="text-uppercase">Выполняем заказы на разработку: </p>   
 		<ul class="studio-service-list">
 		  <li>Веб-сайтов любой сложности</li>
@@ -63,12 +73,17 @@
 		  <li>Слайдшоу и видео для корпоративных презентаций</li>
 		</ul>
 	  </section>
-	  <section class="studio-right">
+	  <section class="studio-right"> <!-- можно использовать aside, поскольку это больше раздел с доп.информацией -->
+      <!--   это изображение большой смысловой нагрузки не несет и больше необходимо для стилизации, лучше убрать из html    -->
 	    <img src="img/nerds-illustration.jpg" width="" height="" alt="Логотип студии «Нёрдс»">
 	    <p class="text-uppercase">с 2004 года Любим точность во всем:</p>
 		<table class="studio-table">
-		  <th>
-		    <td>146%</td>
+ <!--   
+  Если и оформлять это в виде таблице, то нужно в таком виде
+  table>tr>th + tr>td.
+-->
+		  <th> <!-- т.е. здесь должно быть tr -->
+		    <td>146%</td> <!-- т.е. здесь должно быть th -->
 			<td>100%</td>
 			<td>50%</td>
 		  </th>
@@ -78,6 +93,7 @@
 			<td>Минимальная предоплата</td>
 		  </tr>
 		</table>
+     </section>
 	  </section>
 	  <section class="portfolio">
 	    <a class="portfolio-logo">
@@ -93,18 +109,21 @@
           <img src="img/logo-4.png" width="" height="" alt="Логотип MISHKA">
         </a>
 	  </section>
-	  </section>
 	</main>
+  
 	<footer class="main-footer">
+    <!-- можешь использовать section вместо div -->
 	  <div class="footer-map">
 	    <div class="contacts">
 		  <p class="text-uppercase">NЁRDS DESIGN STUDIO</p>
+        <!-- можно использовать тег <address>  вместо p-->
 		  <p>191186, Санкт-Петербург, <br>
              ул. Б. Конюшенная, д. 19/8<br><br>
 			 тел. +7 (812) 275-75-75</p>
 		    <a class="write-button" href="#">Напишите нам</a>
 		</div>
 	  </div>
+    <!-- можешь использовать section вместо div -->
 	  <div class="footer-social">
 	    <ul>
           <li><a class="social-button" href="#">Вконтакте</a></li>
