--- a/catalog.html
+++ b/catalog.html
@@ -1,103 +1,124 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-   <!-- 
-      Пока у нас нет готовых для вставки изображений, можешь использовать адреса "заглушки". Это было сказано в задании.
-      Например: <img src="http://placehold.it/150x100"> вставит изображение 150х100px, можешь попробовать, это довольно удобно и наглядно.
-   -->
-	<header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="http://placehold.it/150x100" width="" height="" alt="Логотип студии «Нёрдс»">
-        </a>
-		<ul class="site-navigation">
-          <li><a href="about.html">Студия</a></li>
-		  <li><a href="clients.html">Клиенты</a></li>
-		  <li class="site-navigation-current"><a href="shop.html">Магазин</a></li>
-		  <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-<!--   этот блок пока что можно разметить обычной ссылкой: a.cart > Корзина   -->
-		<a class="cart" href="#" >Корзина</a>
-      </nav> 
-      <h1>Магазин готовых шаблонов</h1>
-	</header>
-	
-    <main class="container">
-	  <section class="template-filter">
-          <h2 class="visually-hidden">Фильтр шаблонов</h2>
-          <!-- Здесь будет форма -->
-      </section>
-	
-	  <section class="templates">
-	    <ul class="templates-list">
-			<li class="selected-item>
-			  <img src="#" width="" height="" alt="">
-			  <p class="item-title">SEDONA</p>
-              <p class="item-description">Информационный сайт для туристов</b>
-              <a class="button" href="#">9 900 руб</a>
-            </p>
-			</li>
-			<li>
-			  <img src="#" width="" height="" alt="">
-			</li>
-			<li>
-			  <img src="#" width="" height="" alt="">
-			</li>
-			<li>
-			  <img src="#" width="" height="" alt="">
-			</li>
-			<li>
-			  <img src="#" width="" height="" alt="">
-			</li>
-			<li>
-			  <img src="#" width="" height="" alt="">
-			</li>
-		</ul>
-	  </section>
-	  
-	  <ul class="pagination-list">
-          <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
-          <li class="pagination-item"><a>2</a></li>
-          <li class="pagination-item"><a href="#">3</a></li>
-          <li class="pagination-item"><a href="#">Следующая</a></li>
-        </ul>
-      </section>
-	
-	</main>
-  
-	<footer class="main-footer">
-    <!-- можешь использовать section вместо div -->
-	  <section class="footer-map">
-	    <div class="contacts">
-		  <p class="text-uppercase">NЁRDS DESIGN STUDIO</p>
-        <!-- можно использовать тег <address>  вместо p-->
-		  <address>191186, Санкт-Петербург, <br>
-             ул. Б. Конюшенная, д. 19/8<br><br>
-			 тел. +7 (812) 275-75-75</address>
-		    <a class="write-button" href="#">Напишите нам</a>
-		</div>
-	  </section>
-    <!-- можешь использовать section вместо div -->
-	  <section class="footer-social">
-	    <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-		<p class="social-text"><b>Давайте дружить, это выгодно!</b><br>
-		Скидка 10% для друзей из социальных сетей.</p>
-	  </section>
-	</footer>
-	
-	<section class="modal-write-us">
-	  <h2>Напишите нам</h2>
-	  <!-- Здесь будет форма -->
-      <span class="modal-close">x</span>
-	</section>
-	
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс - каталог</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <!-- На странице каталога логотип должен вести на главную страницу -->
+      <a class="main-header-logo" href="index.html">
+        <img src="http://placehold.it/180x80" width="" height="" alt="Логотип студии «Нёрдс»">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="about.html">Студия</a></li>
+        <li><a href="clients.html">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <a class="cart" href="#">Корзина</a>
+    </nav> 
+  </header>
+
+  <main class="container">
+    <h1>Магазин готовых шаблонов</h1>
+    <aside class="template-filter">
+      <h2 class="visually-hidden">Фильтр шаблонов</h2>
+      <!-- Здесь будет форма -->
+    </adide>
+    <section class="templates">
+      <h2 class="visually-hidden">Каталог</h2>
+      <!-- В каталог добавил остальное описание товаров т.к. они должны быть в разметке
+       ,а их появление или скрытие будет делать силами css -->
+      <ul class="templates-list">
+        <li class="selected-item">
+          <!-- Не забывай заполнять атрибут alt -->
+          <img src="http://placehold.it/360x580" width="" height="" alt="Sedona">
+          <h3 class="item-title text-uppercase">Sedona</h3>
+          <p class="item-description">Информационный сайт для туристов</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+        <li>
+          <img src="http://placehold.it/360x580" width="" height="" alt="Pink App">
+          <h3 class="item-title">Pink App</h3>
+          <p class="item-description">Продуктовый лендинг приложения для iOS и Android</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+        <li>
+          <img src="http://placehold.it/360x580" width="" height="" alt="Barbershop">
+          <h3 class="item-title">Barbershop</h3>
+          <p class="item-description">Сайт салоны красоты.Для мужчин, да.</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+        <li>
+          <img src="http://placehold.it/360x580" width="" height="" alt="Mishka">
+          <h3 class="item-title">Mishka</h3>
+          <p class="item-description">Интернет-магазин вязаных игрушек</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+        <li>
+          <img src="http://placehold.it/360x580" width="" height="" alt="A Plus">
+          <h3 class="item-title">A Plus</h3>
+          <p class="item-description">Лендинг курсов повышения квалификации</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+        <li>
+          <img src="http://placehold.it/360x580" width="" height="" alt="Кваст">
+          <h3 class="item-title">Кваст</h3>
+          <p class="item-description">Лендинг курсов повышения квалификации</p>
+          <a class="button" href="#">9 900 руб</a>
+        </li>
+      </ul>
+    </section>
+    <!-- Т.к это навигация по страницам следовательно ссылки можно обернуть в тег nav -->
+    <nav>
+      <ul class="pagination-list">
+        <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+        <li class="pagination-item"><a>2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">Следующая</a></li>
+      </ul>
+    </nav>
+  </main>
+
+  <footer class="main-footer">
+    <h2 class="visually-hidden">Контакты</h2>
+    <section class="footer-map">
+      <h3 class="visually-hidden">Адрес</h3>
+      <div class="contacts">
+        <!-- Здесь текст в веррхнем регистре заменил на нижний, поскольку верхний регистр лучше всегда
+          делать именно через css. Ну и p заменил на b -->
+        <b class="text-uppercase">Nerds design studio</b>
+        <address>
+          <!-- Никогда не используй два тега br, все доп. отступы делаються силами css -->
+          <p>
+            191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8
+          </p>
+          <p>тел. +7 (812) 275-75-75</p>
+        </address>
+        <a class="write-button" href="#">Напишите нам</a>
+        <!-- Карту вставил тоже изображением поскольку она несет полезную информацию для пользователя -->
+        <img src="http://placehold.it/1440x420" width="" height="" alt="Мы на карте">
+      </div>
+    </section>
+    <section class="footer-social">
+      <h3 class="visually-hidden">Мы в социальных сетях</h3>
+      <ul>
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
+      <b>Давайте дружить, это выгодно!</b>
+      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
+
+  <section class="modal-write-us">
+    <h2>Напишите нам</h2>
+    <!-- Здесь будет форма -->
+    <span class="modal-close">x</span>
+  </section>
+</body>
 </html>
