--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -6,14 +5,10 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-   <!-- 
-      Пока у нас нет готовых для вставки изображений, можешь использовать адреса "заглушки". Это было сказано в задании.
-      Например: <img src="http://placehold.it/150x100"> вставит изображение 150х100px, можешь попробовать, это довольно удобно и наглядно.
-   -->
 	<header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="http://placehold.it/150x100" width="" height="" alt="Логотип студии «Нёрдс»">
+          <img src="http://placehold.it/180x80" width="" height="" alt="Логотип студии «Нёрдс»">
         </a>
 		<ul class="site-navigation">
           <li><a href="about.html">Студия</a></li>
@@ -21,176 +16,152 @@
 		  <li><a href="shop.html">Магазин</a></li>
 		  <li><a href="contacts.html">Контакты</a></li>
         </ul>
-<!--   этот блок пока что можно разметить обычной ссылкой: a.cart > Корзина   -->
-<<<<<<< HEAD
 	    <a class="cart" href="#" >Корзина</a>
-=======
-		<ul class="cart">
-          <li class="cart-link">Корзина</li>
-        </ul>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-      </nav> 
+	  </nav> 
     </header>
 	
 	<main class="container">
       <h1 class="visually-hidden">Студия «Нёрдс»</h1>
 	  <section class="slider">
-        <p class="slider-header">Долго, дорого, скурпулезно.</p>
-		<p class="slider-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-        <a class="slider-button" href="learnmore.html">Узнать больше</a>
-<!--    Это изображение больше необходимо для стилизациии и будет задано фоном через css, поэтому из html разметки его лучше убрать    -->
-<<<<<<< HEAD
-	  </section>
-=======
-		<img  src="img/slider1.svg" width="" height="" alt="Долго, дорого, скурпулезно." >	
-      </section>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-	  
+        <div class="slide">
+		  <b class="slider-header">Долго, дорого, скурпулезно.</b>
+		  <p class="slider-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+		 </div> 
+	    <div class="slide">
+          <b class="slider-header">Любим математику как никто другой</b>
+          <p class="slider-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+        </div>
+        <div class="slide">
+          <b class="slider-header">Только ночь, только хардкор</b>
+          <p class="slider-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+        </div>
+    </section>
 	  <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
 		<ul class="services-list">
           <li class="service-item">
-            <h3>Веб-сайты</h3>
+        
+		
+			<img src="http://placehold.it/300x150" width="" height="" alt="Веб-сайты">
+			<h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 			<a class="order-site-button" href="order-site.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
-            <h3>Приложения</h3>
+            <img src="http://placehold.it/300x150" width="" height="" alt="Приложения">
+			<h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
 			<a class="order-application-button" href="order-application.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
-            <h3>Презентации</h3>
+            <img src="http://placehold.it/300x150" width="" height="" alt="Презентации">
+			<h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
 			<a class="order-presentation-button" href="order-presentation.html">Заказать</a>
 		  </li>
         </ul>
 	  </section>
-      
-	  <section class="studio">
-<<<<<<< HEAD
-		<article class="studio-left"> <!-- можно использовать article, вполне себе самостоятельный раздел -->
-<!--   Вот здесь можно изпользовать тег b вместо p, поскольку текст визуально выделен    -->
+      <section class="studio">
+	  <h2 class="visually-hidden">О нас</h2>
+		<article class="studio-left"> 
 		<b class="studio-heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-<!--    Недописан текст    -->
 		<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-<!--   Это заголовок, используй h3     -->
 		<h3>Выполняем заказы на разработку: </h3>   
-=======
-		<section class="studio-left"> <!-- можно использовать article, вполне себе самостоятельный раздел -->
-<!--   Вот здесь можно изпользовать тег b вместо p, поскольку текст визуально выделен    -->
-		<p class="studio-heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-<!--    Недописан текст    -->
-		<p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
-<!--   Это заголовок, используй h3     -->
-		<p class="text-uppercase">Выполняем заказы на разработку: </p>   
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
 		<ul class="studio-service-list">
 		  <li>Веб-сайтов любой сложности</li>
 		  <li>Мобильных приложение для iOS и Android</li>
 		  <li>Слайдшоу и видео для корпоративных презентаций</li>
 		</ul>
-<<<<<<< HEAD
 	  </article>
-	  <aside class="studio-right"> <!-- можно использовать aside, поскольку это больше раздел с доп.информацией -->
-      <!--   это изображение большой смысловой нагрузки не несет и больше необходимо для стилизации, лучше убрать из html    -->
-	    <h3>с 2004 года Любим точность во всем:</h3>
-=======
-	  </section>
-	  <section class="studio-right"> <!-- можно использовать aside, поскольку это больше раздел с доп.информацией -->
-      <!--   это изображение большой смысловой нагрузки не несет и больше необходимо для стилизации, лучше убрать из html    -->
-	    <img src="img/nerds-illustration.jpg" width="" height="" alt="Логотип студии «Нёрдс»">
-	    <p class="text-uppercase">с 2004 года Любим точность во всем:</p>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-		<table class="studio-table">
- <!--   
-  Если и оформлять это в виде таблице, то нужно в таком виде
-  table>tr>th + tr>td.
--->
-<<<<<<< HEAD
-		  <tr> <!-- т.е. здесь должно быть tr -->
-		    <th>146%</th> <!-- т.е. здесь должно быть th -->
-			<th>100%</th>
-			<th>50%</th>
-		  </tr>
-=======
-		  <th> <!-- т.е. здесь должно быть tr -->
-		    <td>146%</td> <!-- т.е. здесь должно быть th -->
-			<td>100%</td>
-			<td>50%</td>
-		  </th>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-		  <tr>
-		    <td>Уровень самоотдачи</td>
-		    <td>Соблюдение сроков</td>
-			<td>Минимальная предоплата</td>
-		  </tr>
-		</table>
-<<<<<<< HEAD
-     </aside>
-=======
-     </section>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-	  </section>
-	  <section class="portfolio">
-	    <a class="portfolio-logo">
-          <img src="img/logo-1.png" width="" height="" alt="Логотип HTML Academy">
-        </a>
-		<a class="portfolio-logo">
-          <img src="img/logo-2.png" width="" height="" alt="Логотип Borodinski">
-        </a>
-		<a class="portfolio-logo">
-          <img src="img/logo-3.png" width="" height="" alt="Логотип Pink">
-        </a>
-		<a class="portfolio-logo">
-          <img src="img/logo-4.png" width="" height="" alt="Логотип MISHKA">
-        </a>
-	  </section>
-	</main>
+	  <aside class="studio-right"> 
+        <table class="studio-table">
+          <!-- h3 заменил на caption, поскольльку этот текст более ли менее описывает содержание таблицы -->
+          <caption class="text-uppercase">с 2004 года Любим точность во всем:</caption>
+          <!-- th заменил на td поскольку, th необходим именно для заголовка столбца, 
+          т.е должен описывать информацию которая соделжится в этом столбце.
+          В данном случае, посмотрев на первую строку таблицы, мы не сможем понять для чего именно
+          нужен этот столбец -->
+          <tr> 
+            <td>146%</td> 
+            <td>100%</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
+      </aside>
+    </section>
+	 <section class="portfolio">
+      <h2 class="visually-hidden">Партнеры</h2>
+      <!-- Обернул логотипы в список, поскольку это однотипные данные -->
+      <ul>
+        <li>
+          <a class="portfolio-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип HTML Academy">
+          </a>
+        </li>
+        <li>
+          <a class="portfolio-logo">
+            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип Borodinski">
+          </a>
+        </li>
+        <li>
+          <a class="portfolio-logo">
+            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип Pink">
+          </a>
+        </li>
+        <li>
+          <a class="portfolio-logo">
+            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип MISHKA">
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
   
-	<footer class="main-footer">
-    <!-- можешь использовать section вместо div -->
-<<<<<<< HEAD
-	  <section class="footer-map">
-	    <div class="contacts">
-		  <p class="text-uppercase">NЁRDS DESIGN STUDIO</p>
-        <!-- можно использовать тег <address>  вместо p-->
-		  <address>191186, Санкт-Петербург, <br>
-=======
-	  <div class="footer-map">
-	    <div class="contacts">
-		  <p class="text-uppercase">NЁRDS DESIGN STUDIO</p>
-        <!-- можно использовать тег <address>  вместо p-->
-		  <p>191186, Санкт-Петербург, <br>
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-             ул. Б. Конюшенная, д. 19/8<br><br>
-			 тел. +7 (812) 275-75-75</address>
-		    <a class="write-button" href="#">Напишите нам</a>
-		</div>
-<<<<<<< HEAD
-	  </section>
-    <!-- можешь использовать section вместо div -->
-	  <section class="footer-social">
-=======
-	  </div>
-    <!-- можешь использовать section вместо div -->
-	  <div class="footer-social">
->>>>>>> abb61ee54fb36e9094103367dbc38415cdd0ca66
-	    <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-		<p class="social-text"><b>Давайте дружить, это выгодно!</b><br>
-		Скидка 10% для друзей из социальных сетей.</p>
-	  </section>
-	</footer>
-	
-	<section class="modal-write-us">
-	  <h2>Напишите нам</h2>
-	  <!-- Здесь будет форма -->
-      <span class="modal-close">x</span>
-	</section>
-	
-  </body>
+<footer class="main-footer">
+    <h2 class="visually-hidden">Контакты</h2>
+    <section class="footer-map">
+      <h3 class="visually-hidden">Адрес</h3>
+      <div class="contacts">
+        <!-- Здесь текст в веррхнем регистре заменил на нижний, поскольку верхний регистр лучше всегда
+          делать именно через css. Ну и p заменил на b -->
+        <b class="text-uppercase">Nerds design studio</b>
+        <address>
+          <!-- Никогда не используй два тега br, все доп. отступы делаються силами css -->
+          <p>
+            191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8
+          </p>
+          <p>тел. +7 (812) 275-75-75</p>
+        </address>
+        <a class="write-button" href="#">Напишите нам</a>
+        <!-- Карту вставил тоже изображением поскольку она несет полезную информацию для пользователя -->
+        <img src="http://placehold.it/1440x420" width="" height="" alt="Мы на карте">
+      </div>
+    </section>
+    <section class="footer-social">
+      <h3 class="visually-hidden">Мы в социальных сетях</h3>
+      <ul>
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
+      <b>Давайте дружить, это выгодно!</b>
+      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
+
+  <section class="modal-write-us">
+    <h2>Напишите нам</h2>
+    <!-- Здесь будет форма -->
+    <span class="modal-close">x</span>
+  </section>
+</body>
 </html>
