Добавил в разметку ссылки на изображения в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <nav class="main-navigation">
       <!-- На странице каталога логотип должен вести на главную страницу -->
       <a class="main-header-logo" href="index.html">
-        <img src="http://placehold.it/180x80" width="" height="" alt="Логотип студии «Нёрдс»">
+        <img src="img/index-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
       </a>
       <ul class="site-navigation">
         <li><a href="about.html">Студия</a></li>
@@ -34,37 +34,37 @@
       <ul class="templates-list">
         <li class="selected-item">
           <!-- Не забывай заполнять атрибут alt -->
-          <img src="http://placehold.it/360x580" width="" height="" alt="Sedona">
+          <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
           <h3 class="item-title text-uppercase">Sedona</h3>
           <p class="item-description">Информационный сайт для туристов</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="http://placehold.it/360x580" width="" height="" alt="Pink App">
+          <img src="img/img-pink.jpg" width="360" height="576"  alt="Pink App">
           <h3 class="item-title">Pink App</h3>
           <p class="item-description">Продуктовый лендинг приложения для iOS и Android</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="http://placehold.it/360x580" width="" height="" alt="Barbershop">
+          <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
           <h3 class="item-title">Barbershop</h3>
           <p class="item-description">Сайт салоны красоты.Для мужчин, да.</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="http://placehold.it/360x580" width="" height="" alt="Mishka">
+          <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
           <h3 class="item-title">Mishka</h3>
           <p class="item-description">Интернет-магазин вязаных игрушек</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="http://placehold.it/360x580" width="" height="" alt="A Plus">
+          <img src="img/img-aplus.jpg" width="360" height="576" alt="A Plus">
           <h3 class="item-title">A Plus</h3>
           <p class="item-description">Лендинг курсов повышения квалификации</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="http://placehold.it/360x580" width="" height="" alt="Кваст">
+          <img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст">
           <h3 class="item-title">Кваст</h3>
           <p class="item-description">Лендинг курсов повышения квалификации</p>
           <a class="button" href="#">9 900 руб</a>
@@ -100,7 +100,7 @@
         </address>
         <a class="write-button" href="#">Напишите нам</a>
         <!-- Карту вставил тоже изображением поскольку она несет полезную информацию для пользователя -->
-        <img src="http://placehold.it/1440x420" width="" height="" alt="Мы на карте">
+        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
       </div>
     </section>
     <section class="footer-social">
