Добавил ссылки на изображения в HTML разметку главной странице
Кроме того, удалил ссылки на изображения, где перечислялись виды услуг, т.к. это явно иконки, а они не несут смысловую информацию. Если их убрать, то всё равно по заголовкам станет понятно что это за услуги.

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <nav class="main-navigation">
       <!-- На странице каталога логотип должен вести на главную страницу -->
       <a class="main-header-logo" href="index.html">
-        <img src="img/index-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
       </a>
       <ul class="site-navigation">
         <li><a href="about.html">Студия</a></li>
