--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="http://placehold.it/180x80" width="" height="" alt="Логотип студии «Нёрдс»">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Нёрдс»">
         </a>
 		<ul class="site-navigation">
           <li><a href="about.html">Студия</a></li>
@@ -43,22 +43,17 @@
         <h2 class="visually-hidden">Услуги</h2>
 		<ul class="services-list">
           <li class="service-item">
-        
-		
-			<img src="http://placehold.it/300x150" width="" height="" alt="Веб-сайты">
-			<h3>Веб-сайты</h3>
+        	<h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 			<a class="order-site-button" href="order-site.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
-            <img src="http://placehold.it/300x150" width="" height="" alt="Приложения">
-			<h3>Приложения</h3>
+           	<h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
 			<a class="order-application-button" href="order-application.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
-            <img src="http://placehold.it/300x150" width="" height="" alt="Презентации">
-			<h3>Презентации</h3>
+           	<h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
 			<a class="order-presentation-button" href="order-presentation.html">Заказать</a>
 		  </li>
@@ -103,22 +98,22 @@
       <ul>
         <li>
           <a class="portfolio-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип HTML Academy">
+            <img src="img/logo1.png" width="260" height="180" alt="Логотип HTML Academy">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип Borodinski">
+            <img src="img/logo2.png" width="260" height="180" alt="Логотип Borodinski">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип Pink">
+            <img src="img/log3.png" width="260" height="180" alt="Логотип Pink">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="http://placehold.it/230x100" width="" height="" alt="Логотип MISHKA">
+            <img src="img/logo4.png" width="260" height="180" alt="Логотип MISHKA">
           </a>
         </li>
       </ul>
@@ -143,7 +138,7 @@
         </address>
         <a class="write-button" href="#">Напишите нам</a>
         <!-- Карту вставил тоже изображением поскольку она несет полезную информацию для пользователя -->
-        <img src="http://placehold.it/1440x420" width="" height="" alt="Мы на карте">
+        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
       </div>
     </section>
     <section class="footer-social">
