Внёс изменения в разметку в соответствии с замечаниями
Поправил названия файлов партнёров и исправил ссылку на магазин.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul class="site-navigation">
           <li><a href="about.html">Студия</a></li>
 		  <li><a href="clients.html">Клиенты</a></li>
-		  <li><a href="shop.html">Магазин</a></li>
+		  <li><a href="catalog.html">Магазин</a></li>
 		  <li><a href="contacts.html">Контакты</a></li>
         </ul>
 	    <a class="cart" href="#" >Корзина</a>
@@ -98,22 +98,22 @@
       <ul>
         <li>
           <a class="portfolio-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo1.png" width="260" height="180" alt="Логотип HTML Academy">
+            <img src="img/logo-1.png" width="260" height="180" alt="Логотип HTML Academy">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="img/logo2.png" width="260" height="180" alt="Логотип Borodinski">
+            <img src="img/logo-2.png" width="260" height="180" alt="Логотип Borodinski">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="img/log3.png" width="260" height="180" alt="Логотип Pink">
+            <img src="img/logо-3.png" width="260" height="180" alt="Логотип Pink">
           </a>
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="img/logo4.png" width="260" height="180" alt="Логотип MISHKA">
+            <img src="img/logo-4.png" width="260" height="180" alt="Логотип MISHKA">
           </a>
         </li>
       </ul>
