--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </li>
         <li>
           <a class="portfolio-logo">
-            <img src="img/logо-3.png" width="260" height="180" alt="Логотип Pink">
+            <img src="img/logo-3.png" width="260" height="180" alt="Логотип Pink">
           </a>
         </li>
         <li>
