Внёс изменеия в разметку в соответствии с замечаниями

--- a/catalog.html
+++ b/catalog.html
@@ -29,8 +29,8 @@
           <legend><h2>Стоимость:</h2></legend>
           <label>Минимальная цена<input type="range" name="range-min-price" min="0" max="14000" step="1" value="0"></label> 
 		  <label>Максимальная цена<input type="range" name="range-max-price" min="1000" max="15000" step="1" value="15000"></label>
-		  <label>От:<input type="number" name="min-price value="0"></label> 
-		  <label>До:<input type="number"name="max-price value="15000"></label>
+		  <label>От:<input type="number" name="min-price" value="0" placeholder="0"></label> 
+		  <label>До:<input type="number" name="max-price" value="15000" placeholder="15000"></label>
         </fieldset>
 	  
 	    <fieldset>
