--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
           </p>
           <p>тел. +7 (812) 275-75-75</p>
         </address>
-        <a class="write-button" href="#">Напишите нам</a>
+        <a class="write-button" href="#user-form">Напишите нам</a>
         <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
       </div>
     </section>
