--- a/catalog.html
+++ b/catalog.html
@@ -70,37 +70,37 @@
       <h2 class="visually-hidden">Каталог</h2>
       <ul class="templates-list">
         <li class="selected-item">
-          <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+          <a href ="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona"></a>
           <h3 class="item-title text-uppercase">Sedona</h3>
           <p class="item-description">Информационный сайт для туристов</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="img/img-pink.jpg" width="360" height="576"  alt="Pink App">
+          <a href ="#"><img src="img/img-pink.jpg" width="360" height="576"  alt="Pink App"></a>
           <h3 class="item-title">Pink App</h3>
           <p class="item-description">Продуктовый лендинг приложения для iOS и Android</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
+          <a href ="#"><img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop"></a>
           <h3 class="item-title">Barbershop</h3>
           <p class="item-description">Сайт салоны красоты.Для мужчин, да.</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
+          <a href ="#"><img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka"></a>
           <h3 class="item-title">Mishka</h3>
           <p class="item-description">Интернет-магазин вязаных игрушек</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="img/img-aplus.jpg" width="360" height="576" alt="A Plus">
+          <a href ="#"><img src="img/img-aplus.jpg" width="360" height="576" alt="A Plus"></a>
           <h3 class="item-title">A Plus</h3>
           <p class="item-description">Лендинг курсов повышения квалификации</p>
           <a class="button" href="#">9 900 руб</a>
         </li>
         <li>
-          <img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст">
+          <a href ="#"><img src="img/img-kvast.jpg" width="360" height="576" alt="Кваст"></a>
           <h3 class="item-title">Кваст</h3>
           <p class="item-description">Лендинг курсов повышения квалификации</p>
           <a class="button" href="#">9 900 руб</a>
