--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="slide">
 		  <b class="slider-header">Долго, дорого, скурпулезно.</b>
 		  <p class="slider-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+          <a class="button slider-button" href="learnmore.html">Узнать больше</a>
 		 </div> 
 	    <div class="slide">
           <b class="slider-header">Любим математику как никто другой</b>
           <p class="slider-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+          <a class="button slider-button" href="learnmore.html">Узнать больше</a>
         </div>
         <div class="slide">
           <b class="slider-header">Только ночь, только хардкор</b>
           <p class="slider-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a class="slider-button" href="learnmore.html">Узнать больше</a>
+          <a class="button slider-button" href="learnmore.html">Узнать больше</a>
         </div>
     </section>
 	  <section class="services">
@@ -48,17 +48,17 @@
           <li class="service-item">
         	<h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-			<a class="order-site-button" href="order-site.html">Заказать</a>
+			<a class="button order-site-button" href="order-site.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
            	<h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-			<a class="order-application-button" href="order-application.html">Заказать</a>
+			<a class="button order-application-button" href="order-application.html">Заказать</a>
 		  </li>
 		  <li class="service-item">
            	<h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-			<a class="order-presentation-button" href="order-presentation.html">Заказать</a>
+			<a class="button order-presentation-button" href="order-presentation.html">Заказать</a>
 		  </li>
         </ul>
 	  </section>
