--- a/index.html
+++ b/index.html
@@ -24,72 +24,78 @@
     </header>
 	
 	<main class="container">
-      <h1 class="visually-hidden">Студия «Нёрдс»</h1>
+      
+	  <h1 class="visually-hidden">Студия «Нёрдс»</h1>
 	  <section class="slider">
         <div class="slide">
-		  <b class="slider-header">Долго, дорого, скурпулезно.</b>
-		  <p class="slider-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+		  <b>Долго, дорого, скурпулезно.</b>
+		  <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
 		 </div> 
 	    <div class="slide">
-          <b class="slider-header">Любим математику как никто другой</b>
-          <p class="slider-text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <b>Любим математику как никто другой</b>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
         </div>
         <div class="slide">
-          <b class="slider-header">Только ночь, только хардкор</b>
-          <p class="slider-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <b>Только ночь, только хардкор</b>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a class="button slider-button" href="learnmore.html">Узнать больше</a>
         </div>
-    </section>
+      </section>
+	  
 	  <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
 		<ul class="services-list">
-          <li class="service-item">
+          <li class="service-site">
         	<h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
 			<a class="button order-site-button" href="order-site.html">Заказать</a>
 		  </li>
-		  <li class="service-item">
+		  <li class="service-application">
            	<h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
 			<a class="button order-application-button" href="order-application.html">Заказать</a>
 		  </li>
-		  <li class="service-item">
+		  <li class="service-presentation">
            	<h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
 			<a class="button order-presentation-button" href="order-presentation.html">Заказать</a>
 		  </li>
         </ul>
 	  </section>
-      <section class="studio">
-	  <h2 class="visually-hidden">О нас</h2>
+      
+	  <section class="studio">
+	    <h2 class="visually-hidden">О нас</h2>
 		<article class="studio-left"> 
-		<b class="studio-heading">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-		<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-		<h3>Выполняем заказы на разработку: </h3>   
-		<ul class="studio-service-list">
-		  <li>Веб-сайтов любой сложности</li>
-		  <li>Мобильных приложение для iOS и Android</li>
-		  <li>Слайдшоу и видео для корпоративных презентаций</li>
-		</ul>
-	  </article>
-	  <aside class="studio-right"> 
-        <table class="studio-table">
-          <caption class="text-uppercase">с 2004 года Любим точность во всем:</caption>
-          <tr> 
-            <td>146%</td> 
-            <td>100%</td>
-            <td>50%</td>
-          </tr>
-          <tr>
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение сроков</td>
-            <td>Минимальная предоплата</td>
-          </tr>
-        </table>
-      </aside>
-    </section>
+		  <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+		  <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+		  <h3>Выполняем заказы на разработку:</h3>   
+		  <ul class="studio-service-list">
+		    <li>Веб-сайтов любой сложности</li>
+		    <li>Мобильных приложение для iOS и Android</li>
+		    <li>Слайдшоу и видео для корпоративных презентаций</li>
+		  </ul>
+	    </article>
+	  
+	    <aside class="studio-right"> 
+          <div class="studio-img"></div>
+		  <table class="studio-table">
+            <caption>с 2004 года Любим точность во всем:</caption>
+            <th> 
+              <td>146%</td> 
+              <td>100%</td>
+              <td>50%</td>
+            </th>
+            <tr>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+          </table>
+        </aside>
+      </section>
+	 
 	 <section class="portfolio">
       <h2 class="visually-hidden">Партнеры</h2>
         <ul>
@@ -122,18 +128,17 @@
     <section class="footer-map">
       <h3 class="visually-hidden">Адрес</h3>
       <div class="contacts">
-        <b class="text-uppercase">Nerds design studio</b>
-        <address>
-            <p>
-            191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8
-          </p>
+        <b>Nerds design studio</b>
+        <address class="addres">
+          <p>191186, Санкт-Петербург,<br>
+             ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. +7 (812) 275-75-75</p>
         </address>
-        <a class="write-button" href="#user-form">Напишите нам</a>
-        <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
-      </div>
+        <a class="button write-button" href="#user-form">Напишите нам</a>
+	   </div>
+       <img src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
     </section>
+	
     <section class="footer-social">
       <h3 class="visually-hidden">Мы в социальных сетях</h3>
       <ul>
@@ -142,7 +147,7 @@
         <li><a class="social-button" href="#">Инстаграм</a></li>
       </ul>
       <b>Давайте дружить, это выгодно!</b>
-      <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
     </section>
   </footer>
 
