Закончил разметку и стилизацию главной страницы и модального окна

--- a/catalog.html
+++ b/catalog.html
@@ -140,9 +140,9 @@
     <section class="footer-social">
       <h3 class="visually-hidden">Мы в социальных сетях</h3>
       <ul>
-        <li><a class="social-button" href="#">Вконтакте</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
+        <li><a class="social-button-vk" href="#">Вконтакте</a></li>
+        <li><a class="social-button-fb" href="#">Фейсбук</a></li>
+        <li><a class="social-button-inst" href="#">Инстаграм</a></li>
       </ul>
       <b>Давайте дружить, это выгодно!</b>
       <p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
