--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <div class="studio-img"></div>
 		  <table class="studio-table">
             <caption>с 2004 года Любим точность во всем:</caption>
-            <th> 
+            <tr class="stydio-table-percent"> 
               <td>146%</td> 
               <td>100%</td>
               <td>50%</td>
-            </th>
+            </tr>
             <tr>
               <td>Уровень самоотдачи</td>
               <td>Соблюдение сроков</td>
@@ -170,7 +170,7 @@
         <textarea name="user-message" id="user-message" value="Текст письма" placeholder="В свободной форме" required> </textarea>
       </p>
 	  
-      <input type="submit" name="user-submit" id="user-submit" value="Отправить">
+      <input type="button submit" name="user-submit" id="user-submit" value="Отправить">
     </form>
   </section>
 </body>
