--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <textarea name="user-message" id="user-message" value="Текст письма" placeholder="В свободной форме" required> </textarea>
       </p>
 	  
-      <input type="button submit" name="user-submit" id="user-submit" value="Отправить">
+      <input type="submit" name="user-submit" id="user-submit" value="Отправить">
     </form>
   </section>
 </body>
